--- a/lilac-app/.gitignore
+++ b/lilac-app/.gitignore
@@ -10,9 +10,11 @@
 
 # production
 /build
+/.next
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
@@ -21,3 +23,4 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+package-lock.json
