--- a/node/package.json
+++ b/node/package.json
@@ -15,6 +15,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "graphql": "14",
+    "graphql-request": "^4.3.0",
     "mongoose": "^6.4.0",
     "validator": "^13.7.0",
     "web3": "^1.7.4"
