--- a/lilac-app/package.json
+++ b/lilac-app/package.json
@@ -9,9 +9,11 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@walletconnect/web3-provider": "^1.7.8",
     "antd": "^4.12.2",
     "axios": "^0.21.1",
     "classnames": "^2.2.6",
+    "craco": "^0.0.3",
     "craco-less": "^1.17.1",
     "leaflet": "^1.7.1",
     "react": "^17.0.1",
@@ -20,7 +22,7 @@
     "react-scripts": "4.0.2",
     "sass": "^1.32.7",
     "web-vitals": "^1.0.1",
-    "web3": "^1.3.4",
+    "web3": "^1.7.4",
     "yarn": "^1.22.10"
   },
   "scripts": {
