--- a/lilac-app/package.json
+++ b/lilac-app/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "license": "UNLICENSED",
   "dependencies": {
+    "@apollo/client": "^3.6.9",
     "@craco/craco": "^6.1.1",
     "@reach/router": "^1.3.4",
     "@testing-library/jest-dom": "^5.11.4",
@@ -15,6 +16,7 @@
     "classnames": "^2.2.6",
     "craco": "^0.0.3",
     "craco-less": "^1.17.1",
+    "graphql": "^16.5.0",
     "leaflet": "^1.7.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
