--- a/node/package.json
+++ b/node/package.json
@@ -18,6 +18,7 @@
     "graphql": "14",
     "graphql-request": "^4.3.0",
     "mongoose": "^6.4.0",
+    "run-middleware": "^0.9.10",
     "validator": "^13.7.0",
     "web3": "^1.7.4"
   }
