--- a/lilac-app/package.json
+++ b/lilac-app/package.json
@@ -4,32 +4,27 @@
   "private": true,
   "license": "UNLICENSED",
   "dependencies": {
-    "@craco/craco": "^6.1.1",
+    "@chakra-ui/react": "^2.2.1",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
     "@reach/router": "^1.3.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@walletconnect/web3-provider": "^1.7.8",
-    "antd": "^4.12.2",
     "axios": "^0.21.1",
     "classnames": "^2.2.6",
-    "craco": "^0.0.3",
-    "craco-less": "^1.17.1",
+    "framer-motion": "4.1.17",
     "leaflet": "^1.7.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-leaflet": "^3.1.0",
     "react-scripts": "4.0.2",
-    "sass": "^1.32.7",
     "web-vitals": "^1.0.1",
-    "web3": "^1.7.4",
-    "yarn": "^1.22.10"
+    "web3": "^1.7.4"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
-    "eject": "craco eject"
+    "start": "react-scripts start"
   },
   "eslintConfig": {
     "extends": [
