--- a/lilac-app/package.json
+++ b/lilac-app/package.json
@@ -16,7 +16,9 @@
     "classnames": "^2.2.6",
     "craco": "^0.0.3",
     "craco-less": "^1.17.1",
+    "dotenv": "^16.0.1",
     "graphql": "^16.5.0",
+    "jotai": "^1.7.2",
     "leaflet": "^1.7.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
