--- a/lilac-app/package.json
+++ b/lilac-app/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@walletconnect/web3-provider": "^1.7.8",
+    "@worldcoin/id": "^0.3.0",
     "antd": "^4.12.2",
     "axios": "^0.21.1",
     "classnames": "^2.2.6",
