--- a/node/package.json
+++ b/node/package.json
@@ -1,25 +1,28 @@
 {
-  "name": "node",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/server.js",
-    "start": "node src/server.js"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "axios": "^0.27.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
-    "graphql": "14",
-    "graphql-request": "^4.3.0",
-    "mongoose": "^6.4.0",
-    "run-middleware": "^0.9.10",
-    "validator": "^13.7.0",
-    "web3": "^1.7.4"
-  }
+    "name": "node",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "dev": "nodemon src/server.js",
+        "start": "node src/server.js"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "axios": "^0.27.2",
+        "cors": "^2.8.5",
+        "dotenv": "^16.0.1",
+        "express": "^4.18.1",
+        "graphql": "14",
+        "graphql-request": "^4.3.0",
+        "mongoose": "^6.4.0",
+        "run-middleware": "^0.9.10",
+        "validator": "^13.7.0",
+        "web3": "^1.7.4"
+    },
+    "engines": {
+        "node": "16.x"
+    }
 }
