--- a/node/.env_temp
+++ b/node/.env_temp
@@ -1,2 +1,3 @@
-PORT=
-MONGOOSE=
+PORT=4000
+MONGOOSE=mongodb+srv://test:069oVTBVBZocP5ie@cluster0.ifle6dc.mongodb.net/?retryWrites=true&w=majority
+GRAPH=9ff3530ab3618ffa555bc58ee458cb3c
